# agent-tty

./: .gitattributes  .gitignore  AGENTS.md  EXAMPLES.md  README.md  SKILL.md  agent_tty.py  k.py.template  pyproject.toml  pythond.py  test_pythond.py
.agent/: constitution.md
.agent/contracts/: execution-standard.md
.agent/precedents/: INDEX.yaml  adversarial-means-indistinguishable.yaml  event-spoof-accepted.yaml  pypi-version-immutable.yaml  research-before-guessing.yaml  status-no-side-effects.yaml  unicode-encoding-safety.yaml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html
reference/: cloakbrowser.md
scripts/: k  km
src/agent_tty/: __init__.py  __main__.py  cli.py  monitor.py
tests/: run_all.py  test.sh  test_contracts.py  test_docs.py  test_regressions.py  test_tcp_windows.py
