[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tty"
version = "0.2.1"
description = "Persistent Python runtime for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agent", "terminal", "repl", "ai", "pty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]
dependencies = [
    "pywinpty; sys_platform == 'win32'",
]

[project.scripts]
k = "agent_tty:main"

[project.urls]
Homepage = "https://github.com/rangersui/agent-tty"
Repository = "https://github.com/rangersui/agent-tty"
